# Weather

./: .gitignore  CMakeLists.txt  README.md  token.txt
src/headers/: application.hpp  client.hpp  network.hpp
src/sources/: application.cpp  client.cpp  main.cpp  network.cpp
